fix gap whatsapp button

--- a/frontend/src/components/whatsappButton.module.scss
+++ b/frontend/src/components/whatsappButton.module.scss
@@ -12,7 +12,6 @@
   background-color: #2f323f;
   border: solid 1px #2f323f;
   border-radius: 8px;
-  transform: rotate(-90deg);
 
   &:hover {
     color: #000;
