--- a/frontend/src/pages/Home/videoBanner.module.scss
+++ b/frontend/src/pages/Home/videoBanner.module.scss
@@ -32,11 +32,4 @@
     width: 872px;
     height: 485px;
   }
-
-  .whatsappButtonPosition {
-    position: absolute;
-    top: 40%;
-    right: -90px;
-    transform: rotate(360deg);
-  }
 }
